syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "AuthProto";

package com.nixagh.auth;

message AuthRequest {
    string username = 1;
    string password = 2;
}

message AuthResponse {
    string token = 1;
    string error = 2;
}

service AuthService {
    rpc Auth(AuthRequest) returns (AuthResponse);
}